Added health, lives and a way to attack